--- a/flaskr/templates/game-test.html
+++ b/flaskr/templates/game-test.html
@@ -8,6 +8,7 @@
         <style>
             body {
                 position: absolute;
+                background-color: black;
                 inset: 0;
                 display: flex;
                 align-items: center;
