Added animation to the sprites

--- a/flaskr/templates/editor.html
+++ b/flaskr/templates/editor.html
@@ -126,17 +126,6 @@
                                 <!-- LIST ITEMS GO HERE-->
                                 <div class="plus-button"></div>
                             </ol>
-                            <div name="origin-offset" class="json-object">
-                                <label>Origin Offset</label>
-                                <div class="json-field">
-                                    <label>X:</label>
-                                    <input type="number" name="x"/>
-                                </div>
-                                <div class="json-field">
-                                    <label>Y:</label>
-                                    <input type="number" name="y"/>
-                                </div>
-                            </div>
                             <ol name="collision-boxes" class="json-array">
                                 <label>Collision Boxes</label>
                                 <div class="li-template">
@@ -239,7 +228,7 @@
                                 <div class="plus-button"></div>
                             </ol>
                         </form>
-                        <form id="state-config" class="config">
+                        <form id="state-config" class="config" style="padding-inline: 5rem;">
                             <div class="json-field scene-reference">
                                 <label>Initial Scene ID</label>
                                 <input type="number" name="initial-scene"/>
