added export request to the server

--- a/flaskr/templates/editor.html
+++ b/flaskr/templates/editor.html
@@ -163,7 +163,7 @@
                                 <input type="number" name="height"/>
                             </div>
                             <div class="json-field">
-                                <label>Background Color</label>
+                                <label>Inside Color</label>
                                 <input type="color" name="background-color"/>
                             </div>
                             <div class="json-field">
@@ -379,6 +379,7 @@
 
         <input type="file" id="project-load" accept=".sqlite" />
         <a id="project-save" href="" download=""></a>
+        <a id="export-save" href="" download=""></a>
 
     </body>
 </html>
