--- a/flask_server/templates/editor.html
+++ b/flask_server/templates/editor.html
@@ -14,7 +14,7 @@
         <script src="/static/js/libs/codemirror-5.65.13/addon/edit/matchbrackets.js"></script>
         <script src="/static/js/libs/codemirror-5.65.13/addon/search/match-highlighter.js"></script>
         <script src="/static/js/libs/sql-wasm.js" defer></script>
-        <script type="module" src="/static/js/editor/main.js"></script>
+        <script type="module" src="/static/js/editor/editor.js"></script>
     </head>
     <body>
 
