--- a/flask_server/templates/game-export.html
+++ b/flask_server/templates/game-export.html
@@ -18,8 +18,7 @@
             #canvas {
                 width: 100%;
                 height: 100%;
-                image-rendering: pixelated;
-                object-fit: contain;
+                object-fit: none;
             }
         </style>
         <script src="./sql-wasm.js" defer></script>
