--- a/flask_server/templates/game-test.html
+++ b/flask_server/templates/game-test.html
@@ -18,8 +18,7 @@
             #canvas {
                 width: 100%;
                 height: 100%;
-                image-rendering: pixelated;
-                object-fit: contain;
+                object-fit: none;
             }
         </style>
         <script type="module" src="/static/js/game-test/game-test.js"></script>
