--- a/flask_server/templates/game-export.html
+++ b/flask_server/templates/game-export.html
@@ -6,19 +6,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{{title}}</title>
         <style>
-            body {
+            html, body {
                 position: absolute;
                 background-color: black;
                 inset: 0;
                 display: flex;
                 align-items: center;
                 justify-content: center;
+                overflow: clip;
                 margin: 0;
             }
             #canvas {
-                width: 100%;
-                height: 100%;
-                object-fit: none;
+                display: block;
             }
         </style>
         <script src="./sql-wasm.js" defer></script>
