--- a/flask_server/templates/editor.html
+++ b/flask_server/templates/editor.html
@@ -167,7 +167,7 @@
                                     <input type="number" name="zoom"/>
                                 </div>
                                 <div class="json-field">
-                                    <label>Color</label>
+                                    <label>Color:</label>
                                     <input type="color" name="color"/>
                                 </div>
                                 <div class="json-field">
@@ -204,7 +204,7 @@
                                             <input type="number" name="scale-y" value="1"/>
                                         </div>
                                         <div class="json-field">
-                                            <label>Color</label>
+                                            <label>Color:</label>
                                             <input type="color" name="color" value="#FFFFFF"/>
                                         </div>
                                         <div class="json-field">
