fixed a few more things in the editor

--- a/flask_server/templates/editor.html
+++ b/flask_server/templates/editor.html
@@ -316,7 +316,7 @@
             </header>
 
             <div class="pop-up">
-                <form class="window">
+                <div class="window">
                     <p></p>
                     <div class="window-inputs">
                         <section>
@@ -350,7 +350,7 @@
                             </button>
                         </section>
                     </div>
-                </form>
+                </div>
             </div>
 
         </div>
