--- a/flask_server/templates/editor.html
+++ b/flask_server/templates/editor.html
@@ -6,13 +6,13 @@
         </title>
         <link rel="icon" type="image/x-icon" href="/static/img/favicon.ico"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <link rel="stylesheet" href="/static/js/libs/codemirror-5.65.13/lib/codemirror.css"/>
-        <link rel="stylesheet" href="/static/js/libs/codemirror-5.65.13/theme/dracula.css"/>
+        <link rel="stylesheet" href="/static/js/libs/codemirror5/lib/codemirror.css"/>
+        <link rel="stylesheet" href="/static/js/libs/codemirror5/theme/dracula.css"/>
         <link rel="stylesheet" href="/static/style/editor.css"/>
-        <script src="/static/js/libs/codemirror-5.65.13/lib/codemirror.js"></script>
-        <script src="/static/js/libs/codemirror-5.65.13/addon/edit/closebrackets.js"></script>
-        <script src="/static/js/libs/codemirror-5.65.13/addon/edit/matchbrackets.js"></script>
-        <script src="/static/js/libs/codemirror-5.65.13/addon/search/match-highlighter.js"></script>
+        <script src="/static/js/libs/codemirror5/lib/codemirror.js"></script>
+        <script src="/static/js/libs/codemirror5/addon/edit/closebrackets.js"></script>
+        <script src="/static/js/libs/codemirror5/addon/edit/matchbrackets.js"></script>
+        <script src="/static/js/libs/codemirror5/addon/search/match-highlighter.js"></script>
         <script src="/static/js/libs/sql-wasm.js" defer></script>
         <script type="module" src="/static/js/editor/editor.js"></script>
     </head>
